# fx-tracker

./: .dockerignore  .gitattributes  .gitignore  .virgil.yml  CLAUDE.md  Cargo.toml  REVIEW-NOTES.md  code_review.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.e2e.ts  vite.config.ts  vitest.config.ts
.agent/: HANDBOOK.md
.agent/ai-analysis/: ARCHITECTURE.md  BUGS.md  CONVENTIONS.md  INTERFACES.md  OWNERSHIP.md
.agent/backtest-core/: ARCHITECTURE.md  BUGS.md  CONVENTIONS.md  INTERFACES.md  OWNERSHIP.md
.agent/charting/: ARCHITECTURE.md  BUGS.md  CONVENTIONS.md  INTERFACES.md  OWNERSHIP.md
.agent/data-infrastructure/: ARCHITECTURE.md  BUGS.md  CONVENTIONS.md  INTERFACES.md  OWNERSHIP.md
.agent/desktop-shell/: ARCHITECTURE.md  BUGS.md  CONVENTIONS.md  INTERFACES.md  OWNERSHIP.md
.agent/indicators/: ARCHITECTURE.md  BUGS.md  CONVENTIONS.md  INTERFACES.md  OWNERSHIP.md
.agent/mcp-server/: ARCHITECTURE.md  BUGS.md  CONVENTIONS.md  INTERFACES.md  OWNERSHIP.md
.agent/oanda-trading/: ARCHITECTURE.md  BUGS.md  CONVENTIONS.md  INTERFACES.md  OWNERSHIP.md
.agent/strategy-monitor/: ARCHITECTURE.md  BUGS.md  CONVENTIONS.md  INTERFACES.md  OWNERSHIP.md
.claude/commands/: audit.md  bug.md  idea.md  review-pr.md
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: pr.yml  release.yml  staging.yml  test-windows-build.yml  verify-update.yml
.stamp/: config.yml  mirror.yml
.stamp/reviewers/: product.md  security.md  standards.md
.stamp/trusted-keys/: manifest.yml  sha256_8bb53d53841c0d61ed693b40a282d3458f30ead7d9f538fd7193bc8590d0ba61.pub  sha256_a8a632084232af24a664fc679a800cf74b919493faccf3836259d5321d5b9890.pub
crates/wickd/: Cargo.toml  README.md  STRATEGY_ABI.md  WALKTHROUGH.md
crates/wickd-core/: Cargo.toml
crates/wickd-core/assets/: events.json
crates/wickd-core/src/: alert_queue.rs  calendar_store.rs  config.rs  error.rs  event_sink.rs  events.rs  feed.rs  hub_client.rs  lib.rs  ndjson.rs  paths.rs  pending.rs  strategy_store.rs  stream_hub.rs  watchers.rs
crates/wickd-core/src/backtest/: correctness_fixture_tests.rs  costs.rs  engine.rs  indicator_engine.rs  indicator_fixture_tests.rs  indicators.rs  mod.rs  mtf.rs  optimizer.rs  patterns.rs  pivots.rs  regime_detector.rs  rules_engine.rs  rules_engine_tests.rs  rules_strategy.rs  rules_triggers.rs  rules_types.rs  scripted_strategy.rs  strategies.rs  strategy.rs  surprise.rs  walk_forward.rs
crates/wickd-core/src/crypto/: device.rs  encryption.rs  kdf.rs  mod.rs  password_strength.rs  rate_limit.rs  types.rs  vault.rs
crates/wickd-core/src/models/: candle.rs  mod.rs  order.rs  position.rs  trade.rs
crates/wickd-core/src/oanda/: client.rs  endpoints.rs  mod.rs  streaming.rs  types.rs
crates/wickd-core/src/strategy/: candle_boundary.rs  candle_source.rs  mod.rs  multi_watcher.rs  pattern_match.rs  pending_store.rs  tick_stream_source.rs  watch_state.rs  watcher.rs
crates/wickd-core/tests/: golden_script_corpus.rs  scripted_position_state.rs
crates/wickd-core/tests/golden_scripts/: 01_minimal.rhai  02_rsi_with_parameters.rhai  03_ema_cross_with_risk.rhai  04_full_sdk_surface.rhai  05_session_gate.rhai  06_event_blackout.rhai  07_surprise_fade.rhai  08_rr_exit_position_state.rhai
crates/wickd/deploy/launchd/: README.md  com.openthink.wickd-books.plist  com.openthink.wickd-calendar.plist  com.openthink.wickd-feed.plist  com.openthink.wickd-stream.plist  com.openthink.wickd-watch.plist  com.openthink.wickd-watchdog.plist  install.sh  uninstall.sh  wickd-candle-watchdog.py  wickd.newsyslog.conf
crates/wickd/src/: alert.rs  audit.rs  auto_exec.rs  baseline.rs  books.rs  convert.rs  dashboard.rs  events.rs  feed.rs  fs_perms.rs  main.rs  output.rs  prompt.rs  risk.rs  signal_alert.rs  sink.rs  spread_stats.rs  vault_store.rs  watchlist.rs
crates/wickd/src/commands/: alert.rs  approve.rs  audit.rs  backtest.rs  books.rs  calendar.rs  candles.rs  client.rs  dashboard.rs  feed.rs  instruments.rs  login.rs  mod.rs  pending.rs  queue.rs  scripted.rs  strategy.rs  stream.rs  trade.rs  view.rs  walk_forward.rs  watch.rs
crates/wickd/tests/: launchd_templates.rs  sigpipe.rs
crates/wickd/views/: ticket.tsx  watcher.tsx
data/calendar/: 2022-01.csv  2022-02.csv  2022-03.csv  2022-04.csv  2022-05.csv  2022-06.csv  2022-07.csv  2022-08.csv  2022-09.csv  2022-10.csv  2022-11.csv  2022-12.csv  2023-01.csv  (+42 more)
docs/: README.md  ai-context-routing.md  ai-terminal-architecture.md  architecture.md  auto-update-verification.md  candlesight-archive.md  d3-live-order-checklist.md  deployment-order.md  local-store.md  oanda-api-reference.md  regression-test-checklist.md  rhai-dialect-diff.md  staging-setup.md  strategy-store.md  tauri-guide.md
mcp-server-rs/: Cargo.toml
mcp-server-rs/.cargo/: config.toml
mcp-server-rs/docs/help/: conversion-prompt.md  indicators.md  strategy-authoring.md
mcp-server-rs/src/: main.rs  sanitize.rs  store.rs
mcp-server-rs/src/shared/: mod.rs
mcp-server-rs/src/types/: db_rows.rs  mod.rs  params.rs
scripts/: scrape-forexfactory.ts  verify-auto-update.sh  verify-auto-update.test.sh
shared/: Cargo.toml
shared/src/: lib.rs
src/: BacktestApp.tsx  ChartApp.tsx  LocalApp.tsx  StrategyWatcherApp.tsx  constants.ts  index.css  index.tsx
src-tauri/: .env.example  Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: event_sink.rs  hub_stream.rs  lib.rs  main.rs  notifications.rs  spread_stats.rs  tray.rs
src-tauri/src/ai/: client.rs  context.rs  mod.rs  prompts.rs  sanitize.rs  strategy_builder.rs  strategy_recovery.rs  streaming.rs
src-tauri/src/commands/: accounts.rs  backtest.rs  chat.rs  credentials.rs  daemon.rs  data.rs  economic_calendar.rs  feed.rs  local_store.rs  mod.rs  oanda.rs  spread_stats.rs  strategy_store.rs  streaming.rs  trading.rs  updater.rs  window.rs
src-tauri/src/local_store/: import.rs  migrations.rs  mod.rs
src-tauri/src/strategy_convert/: conversion-prompt.md  convert.rs  mod.rs  sanitize.rs
(+216 files in other folders)
