[package]
name = "wickd-core"
version = "0.1.0"
edition = "2021"
description = "Tauri-free trading core for wickd: backtest engine, strategy/pattern matching, OANDA client, and the credential vault. Shared by the desktop app, the MCP server, and the wickd CLI."

[dependencies]
shared = { path = "../../shared" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime + HTTP (OANDA REST + streaming)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# Domain primitives
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
urlencoding = "2.1.3"

# Errors / logging / config / globals
anyhow = "1"
thiserror = "2"
tracing = "0.1"
dirs = "5"
dotenvy = "0.15"
once_cell = "1.19"

# Backtest optimization (data parallelism) + scripted strategies
rayon = "1.10"
rhai = { version = "1.21", features = ["sync", "decimal", "no_float"] }

# Credential vault crypto (Argon2id → HKDF → AES-256-GCM, HMAC via sha2)
argon2 = "0.5"
base64 = "0.21"
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
rand = "0.8"
zxcvbn = "3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
rust_decimal_macros = "1"
