[package]
name = "wickd"
version = "0.1.0"
edition = "2021"
description = "Headless, agent-first CLI for wickd: login, strategy, listen, trade. JSON by default so AI agents can wrap it."

[[bin]]
name = "wickd"
path = "src/main.rs"

[dependencies]
wickd-core = { path = "../wickd-core" }
shared = { path = "../../shared" }

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Async runtime for OANDA REST/stream calls
# "net" is for the AGT-618 socket-hub attach probe (UnixStream) in hub.rs.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "io-std", "io-util", "process", "net"] }

# Restore default SIGPIPE at startup (AGT-622) so `wickd ... | head` dies
# quietly with status 141 instead of panicking on EPIPE.
libc = "0.2"

# No-echo prompt for the API key during interactive `login` + home-dir resolution
rpassword = "7"
dirs = "5"

# OS keychain for the OANDA API key at rest (macOS Keychain via apple-native).
# Gated by the login session — no master password, so reads are non-interactive
# (agents / daemons / CI work without a TTY).
keyring = { version = "3", features = ["apple-native"] }

# Timestamps for backtest date ranges / event stamping
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Alert ids (AGT-617).
uuid = { version = "1", features = ["v4"] }

# Append-only local audit log of every execution decision (~/.wickd/audit.db).
# `bundled` compiles SQLite in-tree so there is no system-sqlite dependency.
rusqlite = { version = "0.32", features = ["bundled"] }

# Book snapshot bucket arrays (~/.wickd/books.db) are stored gzip-compressed:
# ~15-30KB of bucket JSON per snapshot compresses ~5x, and the collector
# writes ~1k snapshots/day at the 20-minute native cadence.
flate2 = "1"

# Terminal dashboard (`wickd dashboard`, AGT-616): ratatui renders the live
# watchlist table, crossterm drives raw mode / the alternate screen / key input.
# ratatui 0.29 re-exports crossterm 0.28, so the versions stay in lockstep.
ratatui = "0.29"
crossterm = "0.28"
